--- a/app/views/reports/_current-status.html.erb
+++ b/app/views/reports/_current-status.html.erb
@@ -1,25 +1,32 @@
 <section id="current-status">
   <section id="current-status-normal">
     <div class=" col-sm-12" id="current-status-header" style="background: #fefefe;border-bottom: 4px solid #000;">
-      <div class="col-sm-4" style="padding-top: 10px;border-right: 1px solid #ccc;">
+      <div class="col-sm-3" style="border-right: 1px solid #ccc; text-align: center;">
         <label>Condition</label>
-
-        <p>CycleTime Current Status Block Chart</p>
-
-        <p id="current-date" style="font-size: 12px;"></p>
+        <p style="padding-top: 10px; padding-bottom: 10px;">CycleTime Current Status Block Chart</p>
       </div>
 
-      <div class="col-sm-4" style="padding-top: 10px;border-right: 1px solid #ccc;">
-        <p>Product Line</p>
+      <div class="col-sm-3" style="padding-top: 15px;">
+        <label>Product Line</label>
         <select id="vehicle-select" style="min-width: 200px;text-align: center;">
           <% Department.where(is_product_line: true).each do |p| %>
               <option value="<%= p.id %>"><%= p.name %></option>
           <% end %>
         </select>
       </div>
-      <div class="col-sm-4" style="text-align: center;">
+
+      <div class="col-sm-3" style="padding-top: 10px;padding-bottom:10px;border-left: 1px solid #ccc; display: flex;">
+        <div style="margin-top: 10px;">
+          <label>近</label>
+          <input type="number" style="width: 60px;height: 20px;" class="RecentTime" step="5">
+          <label>分钟数据</label>
+        </div>
+        <button class="btn btn-primary RecentTimeBtn" style="width: 60px;">Search</button>
+      </div>
+
+      <div class="col-sm-3" style="text-align: center;border-left: 1px solid #ccc;">
         <label>Current time</label>
-        <p id="current-clock" style="font-size: 30px;font-weight: bold;"></p>
+        <p id="current-clock" style="font-size: 25px;font-weight: bold;"></p>
       </div>
     </div>
 
@@ -83,35 +90,64 @@
 <% end %>
 
 <script type="text/javascript">
+  $('.RecentTime').keydown(function (e) {
+    var ev = window.event || e;
+    if (ev.keyCode == 13) {
+      RecentTimeSearch();
+    }
+  });
+
+  $('.RecentTimeBtn').click(function () {
+    RecentTimeSearch();
+  });
+
+  function RecentTimeSearch() {
+    var productLine = $('#vehicle-select').val();
+    var datatype = 100;
+    var now = new Date();
+    var end_time = now.getFullYear() + "-" + checkTime(now.getMonth() + 1) + "-" + checkTime(now.getDate()) + ' ' + checkTime(now.getHours()) + ':' + checkTime(now.getMinutes()) + ':' + checkTime(now.getSeconds());
+    var start_time = startRecentTime();
+    loadData(productLine, datatype, start_time, end_time);
+  }
+
   var IsLoading = false;
 
   $('#pop-download').click(function () {
     $('.download-panel').fadeToggle(0);
     initDownload();
   });
+
   function hideDownload() {
     $('.download-panel').hide();
     initDownload();
   }
+
   function initDownload() {
     var pre_time = new Date().format('yyyy-MM-dd').toString() + ' ' + '00:00:00';
     var current_time = new Date().format('yyyy-MM-dd hh:mm:ss');
     $('#start_time').attr('value', pre_time);
     $('#end_time').attr('value', current_time);
   }
+
+
   $(document).ready(function () {
     $('.download-panel').hide();
+    /*时间刷新*/
+    window.setInterval(function () {
+      startTime();
+    }, 500);
 
     if ($('#from_ipad').val()) {
       $('.control-chart-interval-group').parent().css({display: "none"});
 
-      /*时间刷新*/
-      window.setInterval(function () {
-        startTime();
-      }, 500);
-
       var productLine = $('#vehicle-select').val();
-      loadData(productLine, 100);
+      var now = new Date();
+      var end_time = now.getFullYear() + "-" + checkTime(now.getMonth() + 1) + "-" + checkTime(now.getDate()) + ' ' + checkTime(now.getHours()) + ':' + checkTime(now.getMinutes()) + ':' + checkTime(now.getSeconds());
+      var start_time = startRecentTime();
+      console.log(start_time);
+      console.log(end_time);
+      loadData(productLine, 100, start_time, end_time);
+      hideDownload();
     } else {
       jeDate({
         dateCell: "#start_time",
@@ -126,7 +162,7 @@
         minDate: "2014-09-19 00:00:00"
       });
 
-      $('.control-chart-interval-group li').each(function (index) {
+      $('.control-chart-interval-group li').each(function () {
         $(this).click(function () {
           $('.control-chart-interval-group li').css({color: 'black', opacity: '0.3'});
           $('.control-chart-interval-group li').attr('datatype', 'false');
@@ -140,15 +176,19 @@
           $(this).attr('datatype', 'true');
           var Choose_Interval_Code = $(this).attr('interval');
           var ProductLine = $('#vehicle-select').val();
+          var now = new Date();
+          var end_time = now.getFullYear() + "-" + checkTime(now.getMonth() + 1) + "-" + checkTime(now.getDate()) + ' ' + checkTime(now.getHours()) + ':' + checkTime(now.getMinutes()) + ':' + checkTime(now.getSeconds());
+          var start_time = startRecentTime();
           $.ajax({
             url: '/departments/entity_groups',
             type: 'get',
             data: {
               interval: Choose_Interval_Code,
-              product_line: ProductLine
+              product_line: ProductLine,
+              start_time: start_time,
+              end_time: end_time
             },
             success: function (data) {
-              //Here can do something
               remove_loading();
             },
             error: function () {
@@ -158,13 +198,7 @@
         });
       });
 
-      /*时间刷新*/
-      window.setInterval(function () {
-        startTime();
-      }, 500);
-
       /*设置整体背景颜色*/
-//        var ClientHeight = document.documentElement.clientHeight;
       var ClientHeight = $(document).height();
       $('#report-content').css({
         height: (ClientHeight - 70) + 'px',
@@ -180,17 +214,25 @@
             $(this).attr('selected', 'true');
           }
         });
-        loadData(productLine, datatype);
+        var now = new Date();
+        var end_time = now.getFullYear() + "-" + checkTime(now.getMonth() + 1) + "-" + checkTime(now.getDate()) + ' ' + checkTime(now.getHours()) + ':' + checkTime(now.getMinutes()) + ':' + checkTime(now.getSeconds());
+        var start_time = startRecentTime();
+        console.log(start_time);
+        console.log(end_time);
+        loadData(productLine, datatype, start_time, end_time);
       } else {
         var productLine = $('#vehicle-select').val();
         var datatype = 100;
-        loadData(productLine, datatype);
+        var now = new Date();
+        var end_time = now.getFullYear() + "-" + checkTime(now.getMonth() + 1) + "-" + checkTime(now.getDate()) + ' ' + checkTime(now.getHours()) + ':' + checkTime(now.getMinutes()) + ':' + checkTime(now.getSeconds());
+        var start_time = startRecentTime();
+        loadData(productLine, datatype, start_time, end_time);
       }
     }
   });
 
-  function loadData(productLine, datatype) {
-    if (productLine == null || datatype == null)
+  function loadData(productLine, datatype, start_time, end_time) {
+    if (productLine == null || datatype == null || start_time == null || end_time == null)
       return;
 
     if ($('#from_ipad').val()) {
@@ -203,15 +245,14 @@
         show_loading(70, 0, 0, 230);
       }
     }
+
     IsLoading = true;
     $('.control-chart-interval-group li').each(function (index) {
       if ($(this).attr('datatype') == 'true') {
         datatype = $(this).attr('interval');
       }
     });
-    if (productLine == null) {
-      productLine = $('#vehicle-select').val();
-    }
+
     $("#product_line_id").val(productLine);
 
     hideDownload();
@@ -220,7 +261,9 @@
       type: 'get',
       data: {
         product_line: productLine,
-        interval: datatype
+        interval: datatype,
+        start_time: start_time,
+        end_time: end_time
       },
       success: function (data) {
         $('.workstation').remove();
@@ -233,7 +276,6 @@
                   '<div class="box-content"><div class="left-number" style="color: #ff0000;">' + data[i].value + '</div>' +
                   '<div class="right-content"><div class="content"><strong>' + data[i].target_max + '</strong><p>Max Target</p></div>' +
                   '<div class="content"><strong>' + data[i].target_min + '</strong><p>Min Target</p></div></div></div></div></div></div>').appendTo('#data_container').ready(function () {
-//                loading_hide();
               });
             } else {
               $('<div class="col-md-3 workstation"><div class="box">' +
@@ -241,7 +283,6 @@
                   '<div class="box-content"><div class="left-number"style="color: #3ed436;">' + data[i].value + '</div>' +
                   '<div class="right-content"><div class="content"><strong>' + data[i].target_max + '</strong><p>Max Target</p></div>' +
                   '<div class="content"><strong>' + data[i].target_min + '</strong><p>Min Target</p></div></div></div></div></div></div>').appendTo('#data_container').ready(function () {
-//                loading_hide();
               });
             }
             $('.download-panel').hide();
@@ -259,17 +300,33 @@
   $("#vehicle-select").change(function () {
     var productLine = $('#vehicle-select').val();
     localStorage.box_msg = "Line_" + productLine + "_interval_100" + "_box_0";
-    loadData(productLine, 100);
+
+    var now = new Date();
+    var end_time = now.getFullYear() + "-" + checkTime(now.getMonth() + 1) + "-" + checkTime(now.getDate()) + ' ' + checkTime(now.getHours()) + ':' + checkTime(now.getMinutes()) + ':' + checkTime(now.getSeconds());
+    var start_time = startRecentTime();
+    loadData(productLine, 100, start_time, end_time);
   });
 
-  /*20s 刷新太快*/
-  var loadDataIntervalValue = window.setInterval("timerLoadData()", 120000);
-
-  function timerLoadData() {
+  setInterval(function () {
     if (!IsLoading) {
-      loadData();
+      var IntervalProductLine = $('#vehicle-select').val();
+      var IntervalDataType;
+
+      $('.control-chart-interval-group li').each(function () {
+        if ($(this).datatype == "true") {
+          IntervalDataType = $(this).attr('interval');
+        } else {
+          IntervalDataType = 100;
+        }
+      });
+
+      var now = new Date();
+      var end_time = now.getFullYear() + "-" + checkTime(now.getMonth() + 1) + "-" + checkTime(now.getDate()) + ' ' + checkTime(now.getHours()) + ':' + checkTime(now.getMinutes()) + ':' + checkTime(now.getSeconds());
+      var start_time = startRecentTime();
+      loadData(IntervalProductLine, IntervalDataType, start_time, end_time);
     }
-  }
+  }, 120000);
+
 
   /*双击事件*/
   function double_click(ele) {
