--- a/app/views/reports/_daily-ftq.html.erb
+++ b/app/views/reports/_daily-ftq.html.erb
@@ -1,15 +1,12 @@
 <div class="header" id="daily-ftq-header">
   <div class="col-sm-12" id="current-status-header" style="background: #fefefe;border-bottom: 4px solid #000">
-    <div class="col-sm-4" style="padding-top: 10px;border-right: 1px solid #ccc;">
+    <div class="col-sm-3" style="border-right: 1px solid #ccc;text-align: center;">
       <label>Condition</label>
-
-      <p>CycleTime Detail Column Chart</p>
-
-      <p id="current-date" style="font-size: 12px;"></p>
+      <p style="padding-top: 10px;">CycleTime Detail Column Chart</p>
     </div>
 
-    <div class="col-sm-4" style="padding-top: 10px;border-right: 1px solid #ccc;">
-      <p>Product Line</p>
+    <div class="col-sm-3" style="padding-top: 15px;border-right: 1px solid #ccc;">
+      <label>Product Line</label>
       <select id="vehicle-select" style="min-width: 200px;text-align: center;">
         <% Department.where(is_product_line: true).each do |p| %>
             <option value="<%= p.id %>"><%= p.name %></option>
@@ -17,7 +14,16 @@
       </select>
     </div>
 
-    <div class="col-sm-4" style="text-align: center;">
+    <div class="col-sm-3" style="padding-top: 10px;padding-bottom:10px;border-left: 1px solid #ccc; display: flex;">
+      <div style="margin-top: 10px;">
+        <label>近</label>
+        <input type="number" style="width: 60px;height: 20px;" class="RecentTime" step="5">
+        <label>分钟数据</label>
+      </div>
+      <button class="btn btn-primary RecentTimeBtn" style="width: 60px;">Search</button>
+    </div>
+
+    <div class="col-sm-3" style="text-align: center;border-left: 1px solid #ccc;">
       <label>Current time</label>
 
       <p id="current-clock" style="font-size: 30px;font-weight: bold;"></p>
@@ -77,7 +83,27 @@
   }
 </style>
 
-<script>
+<script type="text/javascript">
+  $('.RecentTime').keydown(function (e) {
+    var ev = window.event || e;
+    if (ev.keyCode == 13) {
+      RecentTimeSearch();
+    }
+  });
+
+  $('.RecentTimeBtn').click(function () {
+    RecentTimeSearch();
+  });
+
+  function RecentTimeSearch() {
+    var productLine = $('#vehicle-select').val();
+    var datatype = 100;
+    var now = new Date();
+    var end_time = now.getFullYear() + "-" + checkTime(now.getMonth() + 1) + "-" + checkTime(now.getDate()) + ' ' + checkTime(now.getHours()) + ':' + checkTime(now.getMinutes()) + ':' + checkTime(now.getSeconds());
+    var start_time = startRecentTime();
+    loadChartData(productLine, datatype, start_time, end_time);
+  }
+
   var IsLoading = false;
   $(document).ready(function () {
     if ($('#from_ipad').val()) {
@@ -92,7 +118,7 @@
       }
     }
 
-    $('.control-chart-interval-group li').each(function (index) {
+    $('.control-chart-interval-group li').each(function () {
       $(this).click(function () {
         if ($('#from_ipad').val()) {
           show_loading(70, 0, 0, 0);
@@ -112,12 +138,17 @@
 
         var Choose_Interval_Code = $(this).attr('interval');
         var ProductLine = $('#vehicle-select').val();
+        var now = new Date();
+        var end_time = now.getFullYear() + "-" + checkTime(now.getMonth() + 1) + "-" + checkTime(now.getDate()) + ' ' + checkTime(now.getHours()) + ':' + checkTime(now.getMinutes()) + ':' + checkTime(now.getSeconds());
+        var start_time = startRecentTime();
         $.ajax({
           url: '/departments/entity_groups',
           type: 'get',
           data: {
             interval: Choose_Interval_Code,
-            product_line: ProductLine
+            product_line: ProductLine,
+            start_time: start_time,
+            end_time: end_time
           },
           success: function (data) {
             //Here can do something
@@ -150,18 +181,31 @@
         }
       });
 
-      loadChartData(productLine, datatype);
+      var now = new Date();
+      var end_time = now.getFullYear() + "-" + checkTime(now.getMonth() + 1) + "-" + checkTime(now.getDate()) + ' ' + checkTime(now.getHours()) + ':' + checkTime(now.getMinutes()) + ':' + checkTime(now.getSeconds());
+      var start_time = startRecentTime();
+
+      loadChartData(productLine, datatype, start_time, end_time);
     } else {
       var productLine = $('#vehicle-select').val();
       var datatype = 100;
-      loadChartData(productLine, datatype);
+
+      var now = new Date();
+      var end_time = now.getFullYear() + "-" + checkTime(now.getMonth() + 1) + "-" + checkTime(now.getDate()) + ' ' + checkTime(now.getHours()) + ':' + checkTime(now.getMinutes()) + ':' + checkTime(now.getSeconds());
+      var start_time = startRecentTime();
+
+      loadChartData(productLine, datatype, start_time, end_time);
     }
   });
 
   $("#vehicle-select").change(function () {
     var productLine = $('#vehicle-select').val();
     localStorage.box_msg = "Line_" + productLine + "_interval_100" + "_box_0";
-    loadChartData(productLine, 100);
+
+    var now = new Date();
+    var end_time = now.getFullYear() + "-" + checkTime(now.getMonth() + 1) + "-" + checkTime(now.getDate()) + ' ' + checkTime(now.getHours()) + ':' + checkTime(now.getMinutes()) + ':' + checkTime(now.getSeconds());
+    var start_time = startRecentTime();
+    loadChartData(productLine, 100, start_time, end_time);
   });
 
   /*时间刷新*/
@@ -169,22 +213,28 @@
     startTime();
   }, 500);
 
-  var IntervalProductLine = $('#vehicle-select').val();
-  var IntervalDataType;
 
-  $('.control-chart-interval-group li').each(function () {
-    if ($(this).datatype == "true") {
-      IntervalDataType = $(this).attr('interval');
-    } else {
-      IntervalDataType = 100;
+  setInterval(function () {
+    if (!IsLoading) {
+      var IntervalProductLine = $('#vehicle-select').val();
+      var IntervalDataType;
+
+      $('.control-chart-interval-group li').each(function () {
+        if ($(this).datatype == "true") {
+          IntervalDataType = $(this).attr('interval');
+        } else {
+          IntervalDataType = 100;
+        }
+      });
+
+      var now = new Date();
+      var end_time = now.getFullYear() + "-" + checkTime(now.getMonth() + 1) + "-" + checkTime(now.getDate()) + ' ' + checkTime(now.getHours()) + ':' + checkTime(now.getMinutes()) + ':' + checkTime(now.getSeconds());
+      var start_time = startRecentTime();
+      loadChartData(IntervalProductLine, IntervalDataType, start_time, end_time);
     }
-  });
+  }, 120000);
 
-  if (!IsLoading) {
-    var loadChartDataIntervalValue = window.setInterval("loadChartData(IntervalProductLine, IntervalDataType)", 120000);
-  }
-
-  function loadChartData(productLine, chartdatatype) {
+  function loadChartData(productLine, chartdatatype, start_time, end_time) {
     /*清空*/
     $('#charts_containers').children().remove();
     $('.thead-tr').children().remove();
@@ -192,18 +242,19 @@
     $('.tbody-target-min').children().remove();
     $('.tbody-value').children().remove();
 
-
     $('.control-chart-interval-group li').each(function () {
       if ($(this).attr('datatype') == 'true') {
         chartdatatype = $(this).attr('interval');
       }
     });
     /*ajax request*/
-    GetDataFun(productLine, chartdatatype);
+    GetDataFun(productLine, chartdatatype, start_time, end_time);
   }
 
 
-  function GetDataFun(productLine, chartdatatype) {
+  function GetDataFun(productLine, chartdatatype, start_time, end_time) {
+    if (productLine == null || chartdatatype == null || start_time == null || end_time == null) return;
+
     IsLoading = true;
 
     if ($('#from_ipad').val()) {
@@ -220,7 +271,12 @@
     $.ajax({
       url: '/departments/entity_groups',
       type: 'get',
-      data: {product_line: productLine, interval: chartdatatype},
+      data: {
+        product_line: productLine,
+        interval: chartdatatype,
+        start_time: start_time,
+        end_time: end_time
+      },
       success: function (data) {
         var ajaxData = data;
 
